--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.4",
     "antd": "^5.15.3",
+    "dayjs": "^1.11.10",
     "json-loader": "^0.5.7",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
