--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://MuhNaufalArhabi.github.io/Ads-Manager-Clone",
   "name": "ads-manager-clonning",
   "private": true,
   "version": "0.0.0",
@@ -7,12 +8,15 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.4",
     "antd": "^5.15.3",
     "dayjs": "^1.11.10",
+    "gh-pages": "^6.1.1",
     "json-loader": "^0.5.7",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
